--- a/Projects/prj03home/templates/base.html
+++ b/Projects/prj03home/templates/base.html
@@ -25,7 +25,7 @@
       <a href="{% url 'travel_input:schedule_list' %}">일정</a>
       <a href="{% url 'travel_input:generate_dummy' %}">더미 생성</a>
       <a href="{% url 'travel_input:travel_ai_consult' %}">AI 일정 추천</a>
-      <a href="{% url 'travel_input:travel_survey' %}">여행 설문</a>
+      <a href="{% url 'travel_input:home' %}">여행</a>
     </div>
 
     {% if user.is_authenticated %}
