이미지 개선 탭 1차완성

--- a/Projects/prj03home/templates/base.html
+++ b/Projects/prj03home/templates/base.html
@@ -173,6 +173,10 @@
       <a href="{% url 'accounts:register' %}" class="login-btn">회원가입</a>
     </div>
     {% endif %}
+
+    <div class="nav-user">
+      <a href="/image-enhance/" class="login-btn" target="_blank">이미지개선</a>
+    </div>
   </div>
 
   {% if messages %}
