블로그 검색 장고에 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -246,6 +246,7 @@
                 </div>
             </div>
             <a href="{% url 'travel_input:group_travel_list' %}">단체여행</a>
+            <a href="{% url 'travel_input:blog_search' %}">블로그 검색</a>
         </div>
 
         {% if user.is_authenticated %}
